fix: removed uneven background colors

--- a/css/sections/about.css
+++ b/css/sections/about.css
@@ -2,7 +2,6 @@
 
 #about {
   position: relative;
-  background-color: var(--bg-secondary);
   color: var(--text-primary);
   padding: 2rem;
 }
@@ -46,10 +45,9 @@
 .details-container {
   padding: 1.5rem;
   flex: 1;
-  background: white;
+  background: var(--bg-secondary);
   border-radius: 2rem;
-  border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
+  border: 1px solid var(--border-color);
   text-align: center;
   min-width: 230px;
 }
